# islamic-app-server

./: .env.example  .gitignore  FRONTEND_INTEGRATION.md  PRD.md  pyproject.toml
.claude/: settings.local.json
app/: main.py
app/api/: dependencies.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  hadiths.py  health.py  narrators.py  users.py
app/core/: config.py  database.py  security.py
app/models/: hadith.py  narrator.py  user.py
app/schemas/: hadith.py  narrator.py  user.py
app/services/: hadith_service.py  narrator_service.py  user_service.py
